# nexus

./: .editorconfig  .env.local.example  .gitignore  .lintstagedrc.js  .prettierrc  CODE_STYLE.md  CYPRESS_FIX_PLAN.md  CYPRESS_README.md  FIXES.md  README.md  UX_IMPROVEMENTS.md  claude.md  commitlint.config.js  cypress-dev.js  cypress-fix.js  cypress.config.ts  eslint.config.mjs  implementation_plan.md  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  run-cypress-now.js  run-cypress.js  schema.sql  tailwind.config.ts  tsconfig.json
.husky/: commit-msg  pre-commit
cypress/: tsconfig.json
cypress/e2e/: workflow-designer.cy.ts
cypress/support/: commands.ts  component.ts  e2e.ts
docs/: codebase_guide.md  complete_implementation.md  fast_agent_bridge_chat.md  fast_agent_setup.md  mobile_foundation_setup.md  multimodal_chat_ui_design.md  project_status_report.md  server_side_mcp_capabilities.md  supabase_user_authentication.md  testing_strategy.md  testing_strategy_implementation.md  ui_based_orchestration_management.md  workflow_designer_readme.md  workflow_execution_plan.md
fast_agent/: README.md  install.ps1  install.sh  pyproject.toml  requirements.txt  server.py  setup.py  test_client.py
public/: manifest.json  sw.js
public/icons/: README.md  icon-generator.html
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/(main)/: layout.tsx
src/components/: demo.tsx  supabase-init.tsx  theme-toggle.tsx
src/context/: auth-context.tsx  index.ts  mcp-context.tsx
src/hooks/: use-scroll.ts
(+205 files in other folders)
