[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fast-agent"
version = "0.1.0"
description = "A simple FastAPI WebSocket server that can be used to test the Fast-Agent Bridge"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Nexus Team"}
]

dependencies = [
    "fastapi>=0.103.0",
    "uvicorn>=0.23.2",
    "websockets>=11.0.3",
    "pydantic>=2.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.0.280"
]

[tool.ruff]
line-length = 100
target-version = "py38"
select = ["E", "F", "I"]

[tool.black]
line-length = 100
target-version = ["py38"]